Bug Fix Attempt One

--- a/tictacjs.html
+++ b/tictacjs.html
@@ -167,12 +167,12 @@
       //
       // Return true if placed (spot was empty); false if not placed (spot already full)
 
-      // if (board[cellNumber] === null) {
+      if (board[cellNumber] === null) {
           board[cellNumber] = pieceType;
           return true;
-      // }
+      }
 
-      // return false;
+      return false;
   }
 
 
@@ -180,8 +180,8 @@
       // Make next possible move for the computer
 
       for (var i = 0; i < 9; i++) {
-          if (i === 3 || i === 7){
-              board[i] = "o";
+          if (i >= 0 || i <= 9){
+              board[i] = "O";
               return board;
           }
           if (board[i] === null) {
