--- a/tictacjs.html
+++ b/tictacjs.html
@@ -180,7 +180,7 @@
       // Make next possible move for the computer
 
       for (var i = 0; i < 9; i++) {
-          if (i >= 0 || i <= 9){
+          if (i === 3 || i === 7){
               board[i] = "O";
               return board;
           }
@@ -199,7 +199,7 @@
       var gameOver = false;
 
       if (winner) {
-          $("h1").text(winner + " lost");
+          $("h1").text(winner + " Wins!");
           gameOver = true;
       }
 
